--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.7</version>
+    </dependency>
+    <dependency>
       <groupId>net.sourceforge.jadex</groupId>
       <artifactId>jadex-commons</artifactId>
       <version>2.4</version>
